--- a/src/app/features/components/peliculas-sala-cine/peliculas-sala-cine.component.html
+++ b/src/app/features/components/peliculas-sala-cine/peliculas-sala-cine.component.html
@@ -4,7 +4,7 @@
   <form [formGroup]="asignacionForm" (ngSubmit)="asignar()">
     <mat-form-field appearance="fill" class="form-field">
       <mat-label>Seleccionar Película</mat-label>
-      <mat-select formControlName="peliculaId">
+      <mat-select formControlName="idPelicula">
         <mat-option *ngFor="let pelicula of peliculas" [value]="pelicula.idPelicula">
           {{ pelicula.nombre }}
         </mat-option>
@@ -13,7 +13,7 @@
 
     <mat-form-field appearance="fill" class="form-field">
       <mat-label>Seleccionar Sala</mat-label>
-      <mat-select formControlName="salaId">
+      <mat-select formControlName="idSalaCine">
         <mat-option *ngFor="let sala of salas" [value]="sala.idSalaCine">
           {{ sala.nombre }}
         </mat-option>
@@ -38,6 +38,20 @@
       <th mat-header-cell *matHeaderCellDef> Sala </th>
       <td mat-cell *matCellDef="let asignacion">
         {{ asignacion.idSalaCine }}
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="fechaPublicacion">
+      <th mat-header-cell *matHeaderCellDef> fechaPublicacion </th>
+      <td mat-cell *matCellDef="let asignacion">
+        {{ getFechaFormateada(asignacion.fechaPublicacion) }}
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="fechaFin">
+      <th mat-header-cell *matHeaderCellDef> fechaFin </th>
+      <td mat-cell *matCellDef="let asignacion">
+        {{ getFechaFormateada(asignacion.fechaFin) }}
       </td>
     </ng-container>
 
